      they are now disabled when a rule avoids you to delete them (e.g. a Contact corresponding
      to a user) & the reason is displayed as tool-tip.
    # The deletion views have now a better display for the dependencies issues.
      Example: entities are displayed as HTML links.
    # Apps :
        * Creme_config :
            - The buttons configuration can now be customised per role.
            - In the bricks configuration, default configuration is used as initial value when it's relevant
              (instead of starting with an empty configuration).
            - In the relation types configuration, you can now edit the "minimal display" value for standard types.
            - A view which displays all "FileRefs" (temporary files) has been added; it's only available for staff users.
        * Persons :
            - A new optional field has been added to 'Organisation': "code".
              You can use it to distinguish you managed organisations when you get several ones.
              Upgrade note:
                if you upgrade from an instance of Creme 2.6, you have to configure your blocks to display
                this field if you want to see it. As the field is optional, you can also hide it to remove
                it everywhere (notably forms).
        * Documents :
            - A new field, automatically filled, has been added to Document: "file_size".
        * Activities :
            - A field of 'Activity', "Fixed or floating?" (internal name: 'floating_type') is now visible.
            - A "card" brick is now available for the hat of the Activities' detail-view.
              It's used by default by the new installations.
        * Billing :
            - The number generation has been heavily reworked. The old number generation system
              took a prefix in settings & generated numbers in the form "PREFIX15".
              The new system can be visually configured & is more powerful :