@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2009-2024  Hybird
+#    Copyright (C) 2009-2025  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -206,6 +206,7 @@ class CremePropertyType(CremeModel):
         _('Text'), max_length=200, unique=True,
         help_text=_("For example: 'is pretty'"),
     )
+    description = models.TextField(_('Description'), blank=True)
 
     subject_ctypes = models.ManyToManyField(
         ContentType, blank=True,
