@@ -24,6 +24,10 @@
         </div>
     </div>
     <div class="brick-kv-item">
+        <div class="brick-kv-key">{% translate 'Description' %}</div>
+        <div class="brick-kv-value">{% print_field object=object field='description' %}</div>
+    </div>
+    <div class="brick-kv-item">
         <div class="brick-kv-key">{% translate 'Is copiable' %}</div>
         <div class="brick-kv-value">{% print_field object=object field='is_copiable' %}</div>
     </div>
